public/src/assets/style.css
@import url('https://fonts.googleapis.com/css2?family=Martian+Mono:wght@100..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

@font-face {
  font-family: 'Circular Std';
  src: url('./fonts/circular-std-600.ttf') format('truetype');
  font-weight: 600;
  font-style: normal;
}

@font-face {
  font-family: 'Circular Std';
  src: url('./fonts/circular-std-400.ttf') format('truetype');
  font-weight: 400;
  font-style: normal;
}

@font-face {
  font-family: 'Circular Std';
  src: url('./fonts/circular-std-200.ttf') format('truetype');
  font-weight: 200;
  font-style: normal;
}

:root{
  --body: --secondary-background;
  
  --primary-background: #fff;
  --secondary-background: rgb(247, 245, 236);
  --secondary-background-hover: rgb(242, 237, 212);

  --primary-text: #000;
  --secondary-text: rgba(0,0,0,.5);
  --tertiary-text: rgba(0,0,0,.25);

  --font-main: "Circular Std", Arial, Helvetica, Sans-Serif;
  --font-mono: "Martian Mono", monospace;

  --accent-green: #1CE86D;
  --accent-green-dark: #1E905D;
  --accent-hover: #cdffe1;

  --accent: #FC9753;
  --accent-light: #ffbc8f;
  --cross-color: #ffe4d1;
  
  --error-red: #EA5D4D;
}

body{
  background-color: var(--body);
  color: var(--primary-text);
  font-family: var(--font-main);
  padding: 5rem;
}

#root{
  width: 100%;
  height: 100%;
}


.flex{
  display: flex;
}
.row{
  flex-direction: row;
}
.column{
  flex-direction: column;
}
.align-center{
  align-items: center;
}
.justify-center{
  justify-content: center;
}

.space-between{
  width: 100%;
  justify-content: space-between;
}



h1{
  margin: 0;
  font-family: var(--font-main);
  font-weight: 600;
  font-size: 2.4rem;
}
#timer-row{
  width: 27.5rem;
  margin: 1rem 0 .5rem;
}
#player-tokens,
#timer{
  font-size: 1.2rem;
  margin: 0;
  font-weight: 400;
  color: var(--secondary-text);
}
/* #timer::after,
#player-tokens::before{
  content: "";
  display: inline-block;
  width: 1.5rem;
  height: 1.5rem;
  margin-right: .3rem;
  background-image: url(media/icons/coins.svg);
  opacity: .5;
}
#timer::after{
  margin-right: 0;
  margin-left: .3rem;
  background-image: url(media/icons/pause.svg);
} */


.container{
  width: 100%;
  height: 100%;
}

.cells{
  margin-bottom: 3rem;
  border-radius: 1rem;
  overflow: hidden;
}
.cell,
.num-btn{
  width: 3rem;
  height: 3rem;
  font-size: 1.2rem;
  font-weight: 400;
  background-color: var(--secondary-background);
  border: none;
  margin: 1px;
  color: var(--primary-text);
  font-family: var(--font-mono);
}
.cell.initial{
  color: var(--secondary-text);
}
.cell.border-bottom{
  margin-bottom: 3px;
}
.cell.border-top{
  margin-top: 3px;
}
.cell.border-right{
  margin-right: 3px;
}
.cell.border-left{
  margin-left: 3px;
}



.cell.active{
  background-color: var(--accent-light);
  color: #fff;
}
.cell.cross{
  background-color: var(--cross-color);
}
.cell.cross.active{
  background-color: var(--accent);
  color: #fff;
  font-weight: 500;
}


.cell.pencil-cell{
  flex-wrap: wrap;
}
.cell.pencil-cell .pencil{
  height: 1rem;
  width: 33%;
  font-size: .6rem;
  display: inline-block;
  line-height: 1rem;
  color: var(--tertiary-text);
}



.num-btn{
  position: relative;
  font-size: 1rem;
  /* width: 3.5rem;
  height: 3.5rem; */
  border-radius: 50%;
  cursor: pointer;
  transition: background-color .2s, opacity .2s, color .2s;
}
.num-btn:hover{
  background-color: var(--secondary-background-hover);
}
.num-btn.active{
  font-weight: 500;
  color: #fff;
  background-color: var(--accent);
}
.num-btn::before{
  content: "";
  display: block;
  position: absolute;
  width: 1.5rem;
  height: 1.5rem;
  left: 50%;
  top: -1.5rem;
  transform: translateX(-50%);
  background-image: url(media/icons/lock.svg);
  background-repeat: no-repeat;
  background-size: contain;
  background-position: center;
  opacity: 0;
  transition: opacity .2s;
}
.num-btn.locked::before{
  opacity: 1;
}


.num-btn.dimmed{
  opacity: .15;
  pointer-events: none;
}


#num-btns{
  margin-bottom: .5rem;
}
.action-btn{
  cursor: pointer;
  position: relative;
  width: 3rem;
  height: 3rem;
  border-radius: 50%;
  background-color: var(--accent-green);
  border: 2px var(--accent-green) solid;
  margin: 0 2px;
  transition: background-color .2s;
}
.action-btn::after{
  content: "";
  display: block;
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  background-repeat: no-repeat;
  background-size: 45%;
  background-position: center;
  transition: filter .2s;
}
.action-btn.edit::after{
  background-image: url(./media/buttons/edit.svg);
}
.action-btn.erase::after{
  background-image: url(./media/buttons/erase.svg);
}
.action-btn.pencil::after{
  background-image: url(./media/buttons/pencil.svg);
}
.action-btn.undo::after{
  background-image: url(./media/buttons/undo.svg);
}
.action-btn.hint::after{
  background-image: url(./media/buttons/hint.svg);
}
.action-btn:hover{
  background-color: var(--accent-hover);
}
.action-btn.active{
  background-color: transparent;
}



#powered-by-lootlocker{
  font-size: .8rem;
  margin-top: 1.5rem;
  color: #aaa;
  text-decoration: none;
  font-weight: 200;
}
#powered-by-lootlocker span{
  color: var(--accent-green);
  font-weight: 400;
}


form{
  position: relative;
  margin-top: 3rem;
}
form label{
  margin-bottom: 1rem;
}
.input-field{
  width: 24rem;
  padding: .9rem 1.2rem;
  border: none;
  background-color: var(--secondary-background);
  margin-top: .3rem;
  font-weight: 300;
  font-family: inherit;
  font-size: .9rem;
  border-bottom: 2px var(--secondary-background-hover) solid;
  border-radius: .3rem .3rem 0 0;
  transition: background-color .2s, border-color .2s;
}
.input-field:focus{
  background-color: var(--secondary-background-hover);
  outline: none;
  border-color: var(--accent-green);
}
.btn-solid{
  cursor: pointer;
  width: 100%;
  padding: .9rem;
  background-color: var(--accent-green);
  color: var(--accent-green-dark);
  border: none;
  font-family: inherit;
  border-radius: 3rem;
  margin-top: 1rem;
  border: 2px var(--accent-green) solid;
  transition: background-color .2s;
}
.btn-solid:hover{
  background-color: transparent;
}




#form-loader{
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: var(--primary-background);
  background-image: url(media/loading.svg);
  background-repeat: no-repeat;
  background-size: 18%;
  background-position: 50% 30%;
  z-index: 9999;
  transition: opacity .2s;
}
#form-loader.hidden{
  opacity: 0;
  pointer-events: none;
}

#login-error{
  color: var(--error-red);
  font-size: .8rem;
  font-weight: 300;
  line-height: 1rem;
  margin: -1rem 0 0;
  opacity: 0;
  transition: margin .2s, opacity .2s;
}
#login-error.active{
  margin: .5rem 0 -.5rem;
  opacity: 1;
}



.radio-wrap{
  position: relative;
  background-color: var(--secondary-background);
  border-radius: .3rem .3rem 0 0;
  margin-bottom: 1.5rem;
  padding: .3rem;
  border-bottom: 2px var(--secondary-background-hover) solid;
}
.radio-label{
  position: relative;
  padding: .9rem;
  width: 50%;
  margin: 0;
  text-align: center;
  font-size: .9rem;
  font-weight: 300;
  z-index: 1;
  box-sizing: border-box;
  color: rgba(0,0,0,.5);
}
.radio-label.active{
  color: #532607
}
.radio-wrap .backer{
  width: calc(50% - .6rem);
  height: calc(100% - .6rem);
  background-color: var(--accent);
  position: absolute;
  border-radius: .3rem;
  transition: left .3s;
}
.radio-label input{
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
}

